** Moved QuickEdit to package bcdui.widgetNg
* Config
** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
** Use Server/configFiles/log4j2.xml (instead of log4j.properties)

.If you are interested in the individual versions of 3rd party libs for runtime, see
* bcdui_dependencies.gradle for java
* gradle.properties for javascript

.Build:
* Updated to gradle 7.0, including switching to com.github.node-gradle.node plugin and node-js version 12.13 due
* Updated to babel-js, node-sass and jsdoc, see build_package.json

==== Release 5_4_0

.Major new features:

. Support for ECMA6
* Introduced Babel to transpile for usage in Internet Explorer
* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources
* updated to jQuery 3.4.1, jQuery-UI 1.12.1

. Components: Scorecard, Cube, Charts, Export, Grid, Tree
* Added Grid Component
* Added Tree Component
* Added collapse/expand functionaly to cubes
* Reorganized CubeContextMenu and added hard toggle column sort
* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Charts add support for echarts when loading bcduiChart2, image export and some chart types are limitted
* Add support for radar chart when using it
* Cube allows dims-only and measure-only reports, for measure only, you can decide if the data should be aggregated or not
* Cube DND flyover when specifying @description on LevelRef and Measure nodes
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
* Excel Report export moved to client side using FileSaver.js